--- a/frontend/src/app/home/home.component.css
+++ b/frontend/src/app/home/home.component.css
@@ -758,6 +758,10 @@ width: 100%;
 
  @media (max-width:994px) {
 
+    .btn {
+        right: -10px;
+    }
+
     .product-row-view {
         width: 100%;
         display: grid;
@@ -775,6 +779,10 @@ width: 100%;
     }
 
 @media (max-width: 700px) {
+
+    .img {
+        width: 750px;
+    }
     
 .product-row-view {
     width: 100%;
@@ -810,5 +818,6 @@ grid-template-columns: 34% 34% 34%;
     height : 60px;
         font-size: 17px;
 }
+
 }
 
